--- a/src/app/screens/attached-files/attached-files.component.html
+++ b/src/app/screens/attached-files/attached-files.component.html
@@ -18,7 +18,7 @@
            (dragenter)="handleDragEnter($event)"
            (dragleave)="handleDragLeave($event)"
            (dragover)="handleDragOver($event)"
-           (drop)="drop($event)"
+           (drop)="handleDrop($event)"
       >
         <mat-icon>delete_outline</mat-icon>
       </div>
